skip selecting simulation extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,7 @@
 	"files.eol": "\r\n",
 	"java.jdt.ls.java.home": "C:\\Users\\Public\\wpilib\\2025\\jdk",
 	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
+	"editor.defaultFormatter": "richardwillis.vscode-spotless-gradle",
+	"wpilib.selectDefaultSimulateExtension": true,
+	"wpilib.skipSelectSimulateExtension": true
 }
