Finite State Machine Beginnings (#34)
* misc speed changes and fix coral intake NT value

* chore: update LED addresses #

* fix: LEDs rainbow when disabled

* why why why why why

* fix(leds): i swear i didnt know they were BRG

* feat(leds): more modes

* constants adjustments

* Create State Machine for Tower consisting of Elevator, Wrist, and Intake. No driver controls specified yet

* Update dependencies and WPILib. Update RobotContainer to use State Machine

* Update paths to use state machine

* Remove extraneous this.

* Fixed public/private of members

* Add tower initialization to disabled init and disabled exit. Change commands to be subsystem.runOnce() commands and remove other requirements

* Move commands to subsystems and remove commands for jacob to then add

* Remove controls from RobotContainer

* Update tower states

* Fix java jdt home

---------

Signed-off-by: Greyson <github@podcake.net>
Signed-off-by: Fisher <72705185+fisherjacobc@users.noreply.github.com>
Co-authored-by: JacobFisher <72705185+fisherjacobc@users.noreply.github.com>

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ spotless {
             exclude '**/build/**', '**/build-*/**'
         }
         greclipse()
-        indentWithSpaces(4)
+        leadingTabsToSpaces(4)
         trimTrailingWhitespace()
         endWithNewline()
     }
@@ -71,7 +71,7 @@ spotless {
         }
         eclipseWtp('xml')
         trimTrailingWhitespace()
-        indentWithSpaces(2)
+        leadingTabsToSpaces(2)
         endWithNewline()
     }
     format 'misc', {
@@ -80,7 +80,7 @@ spotless {
             exclude '**/build/**', '**/build-*/**'
         }
         trimTrailingWhitespace()
-        indentWithSpaces(2)
+        leadingTabsToSpaces(2)
         endWithNewline()
     }
 }
